--- a/src/main/resources/templates/admin/landing.html
+++ b/src/main/resources/templates/admin/landing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Panel</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <th:block th:replace="~{fragments/header.html :: header}"></th:block>
     <style>
 
     </style>
@@ -12,7 +12,7 @@
 
     <body>
     <!-- Navbar -->
-        <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+        <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 
         <div class="container bg-light p-3 rounded my-5">
             <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
@@ -24,25 +24,25 @@
 
             <ul class="list-group mt-3" style="clear: both;">
                 <li class="list-group-item d-flex justify-content-between align-items-center" th:each="item : ${paths}">
-                    <img class="me-3" style="border-radius: 50%;" width="50px" height="50px" alt="path_image" src="" th:src="'data:image/jpeg;base64,'+${item.getImageDataUrl()}"/>
-                    <span class="me-auto"><strong th:text="${item.getTitle()}"></strong></span>
+                    <img class="me-3" style="border-radius: 50%;" width="50px" height="50px" alt="path_image" src="" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
+                    <span class="me-auto"><strong th:text="${item.title}"></strong></span>
                     <div>
-                        <i class="bi bi-pencil-fill editBtn btn btn-warning me-2 ms-auto" th:item="${item.getId()}"></i>
-                        <i class="bi bi-trash3-fill deleteBtn btn btn-danger ms-auto" th:item="${item.getId()}"></i>
+                        <i class="bi bi-pencil-fill editBtn btn btn-warning me-2 ms-auto" th:item="${item.id}"></i>
+                        <i class="bi bi-trash3-fill deleteBtn btn btn-danger ms-auto" th:item="${item.id}"></i>
                     </div>
                 </li>
             </ul>
 
             <ul class="pagination mt-2 text-center">
-                <li th:if="${pageNumber != 0}" class="page-item"><a rel=".prev" th:href="@{/admin/index(size=${pageSize}, page=${pageNumber - 1})}" class="page-link" href="#">Previous</a></li>
+                <li th:if="${pageNumber != 0}" class="page-item"><a rel=".prev" th:href="@{admin/index(size=${pageSize}, page=${pageNumber - 1})}" class="page-link" href="#">Previous</a></li>
                 <li class="page-item" th:each="pageNum : ${pageNumbers}">
-                    <a th:class="${pageNum==pageNumber + 1 ? 'active page-link' : 'page-link'}" th:href="@{/admin/index(size=${pageSize}, page=${pageNum - 1})}" th:text="${pageNum}"/>
+                    <a th:class="${pageNum==pageNumber + 1 ? 'active page-link' : 'page-link'}" th:href="@{admin/index(size=${pageSize}, page=${pageNum - 1})}" th:text="${pageNum}"/>
                 </li>
-                <li th:if="${pageNumber != totalPages - 1}" class="page-item"><a rel=".next" th:href="@{/admin/index(size=${pageSize}, page=${pageNumber + 1})}"  class="page-link">Next</a></li>
+                <li th:if="${pageNumber != totalPages - 1}" class="page-item"><a rel=".next" th:href="@{admin/index(size=${pageSize}, page=${pageNumber + 1})}"  class="page-link">Next</a></li>
             </ul>
-            <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
+            <th:block th:replace="~{fragments/chat.html :: main_chat}"/>
         </div>
-        <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+        <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 
         <script>
             //Handle Delete Button Clicks
