--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit Path</title>
-  <th:block th:replace="~{/fragments/header.html :: header}"/>
+  <th:block th:replace="~{fragments/header.html :: header}"/>
   <meta name="_csrf" th:content="${_csrf.token}"/>
   <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
@@ -12,7 +12,7 @@
 <body>
 
 <!-- Navbar -->
-<th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
+<th:block th:replace="~{fragments/navbar.html :: navbar}"/>
 
 
 <div class="container my-5 p-4 rounded bg-light">
@@ -168,7 +168,7 @@
     </div>
   </div>
 </div>
-<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 <script defer th:inline="javascript">
   //========= Element References ===============
   const pathTitle = document.getElementById('title')
