--- a/src/main/resources/templates/users/friends.html
+++ b/src/main/resources/templates/users/friends.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Friends Search</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <th:block th:replace="~{fragments/header.html :: header}"></th:block>
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body>
-<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+<th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 <div class="container p-3 text-black rounded my-5 bg-white">
     <input type="hidden" id="myUsername" th:value="${me.username}">
     <div class="navbar d-flex justify-content-end pe-3">
@@ -72,7 +72,7 @@
     </div>
 </div>
 <footer class="footer" style="margin-top: 40px;">
-    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+    <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 </footer>
 
 <script>
