--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Users Panel</title>
-  <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+  <th:block th:replace="~{fragments/header.html :: header}"></th:block>
     <style>
         .hexBg {
             background-image: url("/img/hex.png");
@@ -26,7 +26,7 @@
 <body>
 
     <!-- Navbar -->
-    <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+    <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 
     <div class="container p-4 my-5 rounded bg-light" >
       <div class="navbar bg-body-tertiary">
@@ -48,7 +48,7 @@
                 <span class="col-sm-3 col-xs-12 ps-0"><strong th:text="${item.title}"></strong></span>
                 <span class="col-sm-7 col-xs-12 ps-0 mb-2"><em th:text="${item.description}"></em></span>
                 <div class="col-sm-2 col-xs-12 d-flex justify-content-between align-items-center p-0">
-                    <form th:action="@{/users/goals/delete/{id}(id=${item.id})}" method="post">
+                    <form th:action="@{users/goals/delete/{id}(id=${item.id})}" method="post">
                         <button type="submit" class="btn btn-danger m-1">
                             <i class="bi bi-trash3-fill deleteBtn" th:item="${item.getId()}"></i>
                         </button>
@@ -72,7 +72,7 @@
     <!-- Create Goal Modal -->
     <div class="modal fade" id="createGoalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <form th:action="@{/users/goals/add}" method="post" th:object="${goal}">
+            <form th:action="@{users/goals/add}" method="post" th:object="${goal}">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Create a Goal</h1>
@@ -117,7 +117,7 @@
     <!-- Edit Goal Modal -->
     <div class="modal fade" id="editGoalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <form th:action="@{/users/goals/update}" method="post" th:object="${goal}">
+            <form th:action="@{users/goals/update}" method="post" th:object="${goal}">
                 <input id="editId" type="hidden" th:value="${goal.id}" th:field="*{id}">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -162,7 +162,7 @@
     </div>
 
 
-    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+    <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 
     <script>
         const editBtns = document.getElementsByClassName("editBtn");
@@ -204,12 +204,6 @@
             console.log(editComp);
             console.log(newComp);
 
-
-            // if(newComp) {
-            //     editComp.setAttribute("checked", "checked")
-            // } else {
-            //     editComp.setAttribute("checked", null);
-            // }
         })
 
     </script>
