--- a/src/main/resources/templates/users/paths.html
+++ b/src/main/resources/templates/users/paths.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>All Paths</title>
-  <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+  <th:block th:replace="~{fragments/header.html :: header}"></th:block>
     <style>
 
     </style>
@@ -11,16 +11,16 @@
 
 <body style="background-color: #3c5aa6">
 <!-- Navbar -->
-<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+<th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 
 <div class="container">
 
     <div class="d-flex justify-content-center row bg-light rounded my-5 p-3">
         <h2 class="mb-0 pt-2"><i class="bi bi-diagram-3-fill me-3"></i>Paths</h2>
         <div th:each="path : ${paths}" class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6 p-3">
-            <a th:href="@{/paths/{id} (id=${path.id})}">
+            <a th:href="@{paths/{id} (id=${path.id})}">
                 <div class="card text-center" style="width: 12rem;">
-                    <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" class="card-img-top" alt="Achievement Badge" width="128px" height="128px">
+                    <img th:src="'data:image/jpeg;base64,'+${path.imageDataUrl}" class="card-img-top" alt="Achievement Badge" width="128px" height="128px">
                     <div class="card-body">
                         <div th:text="${path.getTitle()}" class="card-title"></div>
                     </div>
@@ -30,6 +30,6 @@
     </div>
 
 </div>
-<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 </body>
 </html>
