changed recover page routes for testing

--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -12,7 +12,7 @@
 <div class="container p-3 text-black rounded my-5 bg-white">
     <div class="navbar d-flex justify-content-end pe-3">
         <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>
-        <a href="profile/settings" class="btn btn-light" style="float: right;">
+        <a href="/profile/settings" class="btn btn-light" style="float: right;">
             <i class="bi bi-gear me-3"></i>Profile Settings
         </a>
     </div>
