--- a/src/main/resources/templates/users/settings.html
+++ b/src/main/resources/templates/users/settings.html
@@ -10,7 +10,7 @@
   <th:block th:replace="~{fragments/navbar.html :: navbar}"/>
   <div class="container rounded my-5 px-5 py-3 bg-light">
       <div class="navbar bg-body-tertiary mb-3">
-          <a th:href="'profile/' + ${me.username}">
+          <a th:href="'/profile/' + ${me.username}">
               <button class="btn btn-light">
                   <i class="bi bi-arrow-left-square"></i>
               </button>
