fixing admin langing page for deployment

--- a/src/main/resources/templates/admin/landing.html
+++ b/src/main/resources/templates/admin/landing.html
@@ -40,7 +40,7 @@
                 </li>
                 <li th:if="${pageNumber != totalPages - 1}" class="page-item"><a rel=".next" th:href="@{admin/index(size=${pageSize}, page=${pageNumber + 1})}"  class="page-link">Next</a></li>
             </ul>
-            <th:block th:replace="~{fragments/chat.html :: main_chat}"/>
+<!--            <th:block th:replace="~{fragments/chat.html :: main_chat}"/>-->
         </div>
         <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 
