fixing admin langing page for deployment

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -304,6 +304,7 @@
             }catch(err){
                 //Display errors on the console
                 console.error(err)
+                return []
             }
         }
 
