fixing admin langing page for deployment

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -90,7 +90,7 @@
                     <div class="card-footer">
                         <!--Button to Save Path-->
                         <div class="navbar">
-                            <a href="admin/index" class="btn btn-light ms-auto me-2">Cancel</a>
+                            <a href="/admin/index" class="btn btn-light ms-auto me-2">Cancel</a>
                             <a id="savePathButton" class="btn btn-primary me-auto submitBtn">Save Path</a>
                         </div>
                     </div>
