--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -42,7 +42,7 @@
             <div class="col-lg-6">
                 <div class="card" style="width: 100%;">
                     <div class="navbar bg-white mt-2 rounded-top pb-0">
-                        <a href="/admin/index">
+                        <a href="admin/landing">
                             <button class="btn btn-light ms-3">
                                 <i class="bi bi-arrow-left-square"></i>
                             </button>
@@ -807,7 +807,7 @@
                     console.log(response)
 
                     //Redirect to the admin index page
-                    window.location.href = "/admin/index"
+                    window.location.href = "/admin/landing"
                 }catch(err){
                     console.error(err)
                 }
