fixing edit page

--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -245,7 +245,7 @@
 
 
       //Send a fetch request to the backend for the list of exercises
-      const request = await fetch('http://localhost:8080/admin/api/v1/findExerciseByMuscle', {
+      const request = await fetch('/admin/api/v1/findExerciseByMuscle', {
         method: "POST",
         credentials: "include", //Send the SpringSec credentials
         headers: {
@@ -739,12 +739,9 @@
         const token = document.getElementsByName("_csrf")[0].getAttribute("content")
 
         //Generate request to create the new path in the database
-        const request = await fetch('http://localhost:8080/admin/api/v1/updatePath',{
+        const request = await fetch('/admin/api/v1/updatePath',{
           method : "PATCH",
-          // headers : {
-          //     "Content-Type" : "application/json"
-          // },
-          // body : JSON.stringify(pathModel)
+
           credentials : "include",
           headers : {
             "X-CSRF-TOKEN" : token
