--- a/src/main/resources/templates/users/path.html
+++ b/src/main/resources/templates/users/path.html
@@ -58,7 +58,7 @@
             const sendRequest = async () => {
                 try {
                     const token = document.getElementsByName("_csrf")[0].getAttribute("content");
-                    const request = await fetch('http://localhost:8080/admin/api/v1/completeExercise', {
+                    const request = await fetch('/admin/api/v1/completeExercise', {
                         method: "POST",
                         credentials: "include", //Send the SpringSec credentials
                         headers: {
