--- a/src/main/resources/templates/users/paths.html
+++ b/src/main/resources/templates/users/paths.html
@@ -22,7 +22,7 @@
                 <div class="card text-center" style="width: 12rem;">
                     <img th:src="'data:image/jpeg;base64,'+${path.imageDataUrl}" class="card-img-top" alt="Achievement Badge" width="128px" height="128px">
                     <div class="card-body">
-                        <div th:text="${path.getTitle()}" class="card-title"></div>
+                        <div th:text="${path.title}" class="card-title"></div>
                     </div>
                 </div>
             </a>
