added / in front of admin

--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -76,7 +76,7 @@
 
   <!--Button to Save Path-->
   <div class="navbar bg-body-tertiary mt-3">
-    <a href="admin/landing" class="btn btn-primary ms-auto me-2">Cancel</a>
+    <a href="/admin/landing" class="btn btn-primary ms-auto me-2">Cancel</a>
     <a id="savePathButton" class="btn btn-primary me-auto">Save Path</a>
   </div>
 
