added / in front of admin

--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -756,7 +756,7 @@
         console.log(response)
 
         //Redirect to the admin index page
-        window.location.href = "/admin/index"
+        window.location.href = "/admin/landing"
       }catch(err){
         console.error(err)
       }
