--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,7 +14,7 @@
                         aria-expanded="false">
                     Menu
                 </button>
-                <ul class="dropdown-menu" sec:authorize="isAuthenticated">
+                <ul class="dropdown-menu" sec:authorize="isAuthenticated()">
                     <li>
                         <a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin/landing}">
                             <i class="bi bi-diagram-3-fill"></i><button type="button" class="btn w-100">Create Paths</button>
