fixed admin deletePath route removed /

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Change Your Password</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"/>
+    <th:block th:replace="~{fragments/header.html :: header}"/>
 </head>
 <body>
-  <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
+  <th:block th:replace="~{fragments/navbar.html :: navbar}"/>
   <div class="container">
     <form th:action="@{/changePass}" method="POST" id="changePassForm">
       <div class="card" style="width: 18rem;">
@@ -53,6 +53,6 @@
       }
     }
   </script>
-  <th:block th:replace="~{/fragments/footer.html :: footer}"/>
+  <th:block th:replace="~{fragments/footer.html :: footer}"/>
 </body>
 </html>
