--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>HealthPointsFitness</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <th:block th:replace="~{fragments/header.html :: header}"></th:block>
 </head>
 <body>
-    <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+    <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
     <div class="container">
         Index
     </div>
-    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+    <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
   HealthPointsFitness
 </body>
 </html>
