--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -105,7 +105,7 @@
 </head>
 
 <body style="background-color: #3c5aa6">
-<th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
+<th:block th:replace="~{fragments/navbar.html :: navbar}"/>
 
 <div class="container">
     <!-- Banner -->
