--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
 <!--      </div>-->
 <!--  </div>-->
 <!--</div>-->
-<!--<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>-->
+<!--<th:block th:replace="~{fragments/footer.html :: footer}"></th:block>-->
 <!--</body>-->
 <!--</html>-->
 
