--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         .highScore {
@@ -177,53 +176,53 @@
         </div>
     </div>
 
-    <!-- High Score Section -->
-    <h4 class="leaderboard text-center mt-5">High Scores!</h4>
-    <hr class="p-1 rounded" style="color: black;">
-    <div class="row mb-5">
-        <!-- Week High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter1" class="py-2"></div>
-                    <div id="typewriter2" class="py-2"></div>
-                    <div id="typewriter3" class="py-2"></div>
-                    <div id="typewriter4" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-        <!-- Month High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter5" class="py-2"></div>
-                    <div id="typewriter6" class="py-2"></div>
-                    <div id="typewriter7" class="py-2"></div>
-                    <div id="typewriter8" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-        <!-- All Time High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter9" class="py-2"></div>
-                    <div id="typewriter10" class="py-2"></div>
-                    <div id="typewriter11" class="py-2"></div>
-                    <div id="typewriter12" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    &lt;!&ndash; High Score Section &ndash;&gt;-->
+<!--    <h4 class="leaderboard text-center mt-5">High Scores!</h4>-->
+<!--    <hr class="p-1 rounded" style="color: black;">-->
+<!--    <div class="row mb-5">-->
+<!--        &lt;!&ndash; Week High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter1" class="py-2"></div>-->
+<!--                    <div id="typewriter2" class="py-2"></div>-->
+<!--                    <div id="typewriter3" class="py-2"></div>-->
+<!--                    <div id="typewriter4" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Month High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter5" class="py-2"></div>-->
+<!--                    <div id="typewriter6" class="py-2"></div>-->
+<!--                    <div id="typewriter7" class="py-2"></div>-->
+<!--                    <div id="typewriter8" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; All Time High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter9" class="py-2"></div>-->
+<!--                    <div id="typewriter10" class="py-2"></div>-->
+<!--                    <div id="typewriter11" class="py-2"></div>-->
+<!--                    <div id="typewriter12" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <!-- Tutorial Modals -->
     <div class="modal" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
@@ -437,16 +436,7 @@
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
             </a>
         </section>
-        <!-- Section: Social media -->
     </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-<!--    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">-->
-<!--&lt;!&ndash;        © 2020 Copyright:&ndash;&gt;-->
-<!--&lt;!&ndash;        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>&ndash;&gt;-->
-<!--    </div>-->
-    <!-- Copyright -->
 </footer>
 
 <script>
@@ -455,74 +445,6 @@
         e.preventDefault()
         window.location.href="/login"
     }
-
-    document.querySelector(".redirect").onclick = (e) => {
-        e.preventDefault()
-        window.location.href="/login"
-    }
-
-    // High Scores Typing Animation
-    new Typewriter('#typewriter1', {
-        strings: ["> Aldanis - 2000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter2', {
-        strings: ["> Riley - 2700"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter3', {
-        strings: ["> Jacob - 3000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter4', {
-        strings: ["> Hector - 1900"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter5', {
-        strings: ["> Aldanis - 2000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter6', {
-        strings: ["> Riley - 2700"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter7', {
-        strings: ["> Jacob - 3000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter8', {
-        strings: ["> Hector - 1900"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter9', {
-        strings: ["> Aldanis - 2000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter10', {
-        strings: ["> Riley - 2700"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter11', {
-        strings: ["> Jacob - 3000"],
-        autoStart: true,
-        loop: true
-    })
-    new Typewriter('#typewriter12', {
-        strings: ["> Hector - 1900"],
-        autoStart: true,
-        loop: true
-    })
-    ;
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
