fixed admin deletePath route removed /

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -128,7 +128,7 @@
                         </p>
                         <p>
                         <hr/>
-                        <button id="add_exercise_button">
+                        <button id="add_exercise_button" class="btn btn-primary">
                             <i class="bi bi-plus-square"></i>
                             Add Exercise
                         </button>
