fixed admin deletePath route removed /

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -184,7 +184,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button id="close_exercise_button">Close</button>
+                        <button id="close_exercise_button" class="btn btn-light">Close</button>
                     </div>
                 </div>
             </div>
