--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -608,7 +608,13 @@
                     //If the challenges is 0 then add a label with no challenges into the challenges list
                     //to indicate that there's no challenges
                     if(challenges.length === 0) {
-                        listOfChallenges.innerText = "No challenges..."
+                        const infoIcon = document.createElement('i')
+                        infoIcon.classList.add('bi','bi-exclamation-diamond-fill','me-2')
+                        listOfChallenges.appendChild(infoIcon)
+
+                        const tex = document.createElement('span')
+                        tex.innerText = "No challenges have been added to this path"
+                        listOfChallenges.appendChild(tex);
                     }
                 }
             }
