fixed admin deletePath route removed /

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -83,7 +83,7 @@
 
                         <!--List of Challenges-->
                         <div id="list_of_challenges">
-                            <i class="bi bi-exclamation-diamond-fill me-2"> No challenges have been added to this path
+                            <i class="bi bi-exclamation-diamond-fill me-2"/> No challenges have been added to this path
                         </div>
                     </div>
 
