--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary" id="saveChallengeButton">
-                            <i class="bi bi-save2 me-2"></i>Save Challenge
+                            <i class="bi bi-save2 me-2">Save Challenge
                         </button>
                     </div>
                 </div>
