fixed admin deletePath route removed /

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -83,7 +83,6 @@
 
                         <!--List of Challenges-->
                         <div id="list_of_challenges">
-                            <i class="bi bi-exclamation-diamond-fill me-2"/> No challenges have been added to this path
                         </div>
                     </div>
 
@@ -140,7 +139,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary" id="saveChallengeButton">
-                            <i class="bi bi-exclamation me-2"></i>Save Challenge
+                            <i class="bi bi-save2 me-2"></i>Save Challenge
                         </button>
                     </div>
                 </div>
