--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -122,7 +122,7 @@
                         <p>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default1"><span id="challengePointsDisplay"></span>&nbsp;Points</span>
-                            <input type="range" th:default="10" step="5" min="0" max="50" id="challengePoints" class="w-auto ms-2"/>
+                            <input type="range" th:default="10" step="5" min="0" max="50" id="challengePoints" class="w-auto ms-2" style="width: 100%;"/>
                         </div>
                         </p>
                         <p>
