fixed admin deletePath route removed /

--- a/src/main/resources/templates/admin/landing.html
+++ b/src/main/resources/templates/admin/landing.html
@@ -17,7 +17,7 @@
         <div class="container bg-light p-3 rounded my-5">
             <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
                 <span class="h2 me-auto ms-3">Manage Paths</span>
-                <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">
+                <a href="/admin/path/create" class="btn btn-light" style="float: right;">
                     <i class="bi bi-plus-square"></i>&nbsp;&nbsp;Add Path
                 </a>
             </div>
