--- a/src/main/resources/templates/admin/path/create.html
+++ b/src/main/resources/templates/admin/path/create.html
@@ -182,7 +182,7 @@
                             <input type="search" id="searchExercise" placeholder="Filter Exercise by Name"/>
                         </label>
                         <div id="list_of_exercises">
-<!--                            <i class="bi bi-info-square me-2"></i> Select a muscle group from the drop down.-->
+                            <i class="bi bi-info-square me-2"></i> Select a muscle group from the drop down.
                         </div>
                     </div>
 
