--- a/src/main/resources/templates/admin/path/create.html
+++ b/src/main/resources/templates/admin/path/create.html
@@ -83,6 +83,7 @@
 
                         <!--List of Challenges-->
                         <div id="list_of_challenges">
+                            <i class="bi bi-info-square me-2"></i>No challenges have been added.
                         </div>
                     </div>
 
