--- a/src/main/resources/templates/admin/path/create.html
+++ b/src/main/resources/templates/admin/path/create.html
@@ -83,7 +83,7 @@
 
                         <!--List of Challenges-->
                         <div id="list_of_challenges">
-                            <i class="bi bi-info-square me-2"></i>No challenges have been added.
+                            <i class="bi bi-exclamation-diamond me-2"></i>No challenges have been added.
                         </div>
                     </div>
 
@@ -134,7 +134,7 @@
                         </button>
                         <hr/>
                         <div id="selected_exercises">
-<!--                            <i class="bi bi-info-square me-2"></i>-->
+                            <i class="bi bi-exclamation-diamond-fill me-2"></i>No exercises have been added to this challenge.
                         </div>
                         </p>
                     </div>
